fix vertical alignment on oracle chat output

--- a/src/styles/ironsworn-icons.less
+++ b/src/styles/ironsworn-icons.less
@@ -53,11 +53,12 @@
 [class^='isicon-'],
 [class*=' isicon-'] {
   i& {
-    display: flex;
+    display: inline flex;
     align-items: center;
     justify-content: center;
     height: 1em;
     width: 1em;
+    vertical-align: inherit;
     &:before {
       height: 100%;
       width: 100%;
